scrollbar fix

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -48,6 +48,30 @@
 
 ::-moz-selection { background: @cream; color: @black; text-shadow: none; }
 ::selection { background: @cream; color: @black; text-shadow: none; }
+::-webkit-scrollbar {
+    margin-right: 5px;
+    background-color: #eee;
+    width: 12px;
+}
+::-webkit-scrollbar-track {
+    -webit-box-shadow: 0 0 2px #ccc;
+    box-shadow: 0 0 2px #ccc;
+}
+::-webkit-scrollbar-thumb {
+    border: 1px #eee solid;
+    border-radius: 12px;
+    background: #777;
+    -webit-box-shadow: 0 0 8px #555 inset;
+    box-shadow: 0 0 8px #555 inset;
+    -webit-transition: all .3s ease-out;
+    transition: all .3s ease-out;
+}
+::-webkit-scrollbar-thumb:window-inactive {
+    background: #bbb;
+    box-shadow: 0 0 8px #999 inset;
+}
+::-webkit-scrollbar-thumb:hover { background: #999 }
+
 
 html {
 	text-rendering: optimizeLegibility;
